<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Library</string>
    <string name="menu_save">Save</string>
    <string name="menu_discard">Discard changes</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete book</string>
    <string name="menu_add">Add</string>
    <string name="menu_logout">Logout</string>
    <string name="author_name">author name</string>
    <string name="title">title</string>
    <string name="x">X</string>
    <string name="isbn">ISBN</string>
    <string name="rent_book">Rent book</string>
    <string name="return_book">Return Book</string>
    <string name="rented_by">rented by</string>
    <string name="authors">Authors</string>
    <string name="delete">Delete</string>
    <string name="author">author</string>
    <string name="add_author">Add Author</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="no_matches_found">No matches found</string>
    <string name="loading"><![CDATA[<loading>]]></string>
</resources>
