<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="0dip">

    <EditText
        android:id="@+id/author"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dip"
        android:layout_weight="1"
        android:autofillHints=""
        android:gravity="center_vertical"
        android:hint="@string/author"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/title" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/x" />
</LinearLayout>
