<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:text="@string/isbn"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <EditText
            android:id="@+id/isbn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dip"
            android:autofillHints=""
            android:gravity="center_vertical"
            android:hint="@string/isbn"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/isbn" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:text="@string/title"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dip"
            android:autofillHints=""
            android:gravity="center_vertical"
            android:hint="@string/title"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/title" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:text="@string/authors"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- The edit items -->
            <LinearLayout
                android:id="@+id/authorsList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/addAuthor"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/add_author" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/discardButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discard" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
