<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:text="@string/isbn"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip">

            <TextView
                android:id="@+id/isbn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dip"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:singleLine="true"
                android:text="@string/isbn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:text="@string/title"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="0dip">

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dip"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:singleLine="true"
                android:text="@string/title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:text="@string/authors"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <!-- The edit items -->
        <LinearLayout
            android:id="@+id/authorsList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="26dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dip"
                android:paddingEnd="8dip"
                android:text="@string/rented_by"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <TextView
            android:id="@+id/rentedBy"
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_marginEnd="4dip"
            android:gravity="center_vertical"
            android:paddingStart="8dip"
            android:paddingEnd="8dip"
            android:singleLine="true"
            android:text="@string/rented_by" />

        <Button
            android:id="@+id/rent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rent_book" />

    </LinearLayout>

</ScrollView>
